Result images (#187)
* result images

* wip

* fix tests

* fix test

* Metrics

* test

* cleanup and documentation

* update doc

* fix name